--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 
-spring.datasource.url=jdbc:mysql://localhost/pfa
-spring.datasource.username=root
-spring.datasource.password=
-
+spring.datasource.url=jdbc:sqlserver://springserver2.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=spring@springserver2
+spring.datasource.password=Spring-2023
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-project.image=images/
+
+spring.sql.init.mode=always
+
+
+spring.server.port=9191
